--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -1,10 +1,13 @@
 [build]
   base = "dashboard/"
-  command = "npm run build"
+  command = "npm ci --legacy-peer-deps && npm run build"
   publish = "dist/"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20.9.0"
+  NPM_VERSION = "10.1.0"
+  NPM_FLAGS = "--prefer-offline --no-audit"
+  CI = "false"
 
 # SPA redirects - alle Routen zu index.html für React Router
 [[redirects]]
