--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -1,13 +1,9 @@
 [build]
-  base = "dashboard/"
-  command = "npm ci --legacy-peer-deps && npm run build"
-  publish = "dist/"
+  command = "cd dashboard && npm install && npm run build"
+  publish = "dashboard/dist"
 
 [build.environment]
-  NODE_VERSION = "20.9.0"
-  NPM_VERSION = "10.1.0"
-  NPM_FLAGS = "--prefer-offline --no-audit"
-  CI = "false"
+  NODE_VERSION = "18"
 
 # SPA redirects - alle Routen zu index.html für React Router
 [[redirects]]
