\fix: resolve Rollup build issues - add platform-specific rollup dependencies and update Netlify config"

--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "dashboard/"
-  command = "npm install && npm run build"
+  command = "npm ci && npm install @rollup/rollup-linux-x64-gnu --no-save && npm run build"
   publish = "dist/"
 
 [build.environment]
