--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -1,10 +1,11 @@
 [build]
   base = "dashboard/"
-  command = "npm ci && npm install @rollup/rollup-linux-x64-gnu && npm run build"
+  command = "npm ci --include=optional && npm run build"
   publish = "dist/"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_CONFIG_OPTIONAL = "true"
 
 # SPA redirects - alle Routen zu index.html für React Router
 [[redirects]]
