--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "exec": "^0.2.1",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fs-extra": "^11.3.0",
@@ -47,6 +48,7 @@
     "openai": "^5.3.0",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
+    "util": "^0.12.5",
     "yt-search": "^2.13.1",
     "ytdl-core": "^4.11.5"
   },
