--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-bot",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "Ein Discord-Bot mit Web-Dashboard",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,6 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
-    "@distube/ytdl-core": "^4.16.12",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -49,8 +48,7 @@
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
     "util": "^0.12.5",
-    "yt-search": "^2.13.1",
-    "ytdl-core": "^4.11.5"
+    "yt-search": "^2.13.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
