--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-bot",
-  "version": "1.0.24",
+  "version": "1.0.26",
   "description": "Ein Discord-Bot mit Web-Dashboard",
   "main": "index.js",
   "scripts": {
@@ -47,6 +47,7 @@
     "openai": "^5.3.0",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
+    "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
     "yt-search": "^2.13.1"
   },
