--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "erela.js": "^2.4.0",
     "exec": "^0.2.1",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
