--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "play-dl": "^1.9.7",
     "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
+    "youtubei.js": "^14.0.0",
     "yt-search": "^2.13.1"
   },
   "devDependencies": {
