--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "erela.js": "^2.4.0",
     "exec": "^0.2.1",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fs-extra": "^11.3.0",
+    "kazagumo": "^3.3.0",
     "multer": "^2.0.1",
     "node-fetch": "^2.7.0",
     "openai": "^5.3.0",
     "opusscript": "^0.0.8",
+    "shoukaku": "^4.1.1",
     "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
     "youtubei.js": "^14.0.0",
