--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "dotenv": "^16.3.1",
     "exec": "^0.2.1",
     "express": "^4.18.2",
-          "ffmpeg-static": "^5.2.0",
-      "fs-extra": "^11.3.0",
-      "multer": "^2.0.1",
+    "ffmpeg-static": "^5.2.0",
+    "fs-extra": "^11.3.0",
+    "multer": "^2.0.1",
     "node-fetch": "^2.7.0",
-          "openai": "^5.3.0",
-      "opusscript": "^0.0.8",
-      "spotify-web-api-node": "^5.0.2",
+    "openai": "^5.3.0",
+    "opusscript": "^0.0.8",
+    "play-dl": "^1.9.7",
+    "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
     "youtubei.js": "^14.0.0",
     "yt-search": "^2.13.1"
