Fix Radio Panel posting issue - Configure channelId for interactivePanel

--- a/music-settings.json
+++ b/music-settings.json
@@ -312,7 +312,7 @@
   },
   "interactivePanel": {
     "enabled": true,
-    "channelId": "",
+    "channelId": "musik",
     "messageId": "",
     "autoUpdate": true,
     "embedColor": "#FF6B6B"
