Implement dynamic channel dropdowns - Add voice channel selection, replace channel inputs with dropdown lists, display server name instead of ID, add auto-join option

--- a/music-settings.json
+++ b/music-settings.json
@@ -307,6 +307,10 @@
     "showNowPlaying": true,
     "embedColor": "#FF6B6B"
   },
+  "voiceChannel": {
+    "preferredChannelId": "",
+    "autoJoin": true
+  },
   "announcements": {
     "channelId": ""
   },
