Behebe Channel-Einstellungen Persistierung - Channel-IDs statt Namen speichern für Server-Neustarts

--- a/music-settings.json
+++ b/music-settings.json
@@ -316,7 +316,7 @@
   },
   "interactivePanel": {
     "enabled": true,
-    "channelId": "musik",
+    "channelId": "",
     "messageId": "",
     "autoUpdate": true,
     "embedColor": "#FF6B6B"
