--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-bot",
-  "version": "1.0.32",
-  "description": "Ein Discord-Bot mit Web-Dashboard",
+  "version": "1.0.33",
+  "description": "Ein Discord-Bot mit Web-Dashboard und Audio-Visualizer",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -19,7 +19,8 @@
     "bot",
     "javascript",
     "dashboard",
-    "react"
+    "react",
+    "audio-visualizer"
   ],
   "author": "",
   "license": "MIT",
@@ -51,12 +52,14 @@
     "play-dl": "^1.9.7",
     "prism-media": "^1.3.5",
     "spotify-web-api-node": "^5.0.2",
-    "sodium": "^3.0.2",
     "util": "^0.12.5",
     "youtubei.js": "^14.0.0",
     "yt-search": "^2.13.1",
     "ytdl-core": "^4.11.5",
     "ws": "^8.16.0"
+  },
+  "optionalDependencies": {
+    "sodium": "^3.0.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
