Update all project files - Remove audio visualizer components - Update Docker configuration - Enhance Music.tsx dashboard - Improve music-api.js functionality - Update package dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-bot",
-  "version": "1.0.34",
-  "description": "Ein Discord-Bot mit Web-Dashboard und Audio-Visualizer",
+  "version": "1.0.32",
+  "description": "Ein Discord-Bot mit Web-Dashboard",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -19,13 +19,13 @@
     "bot",
     "javascript",
     "dashboard",
-    "react",
-    "audio-visualizer"
+    "react"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/voice": "^0.16.1",
+    "@discordjs/opus": "^0.10.0",
+    "@discordjs/voice": "^0.18.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "axios": "^1.9.0",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
@@ -41,25 +42,16 @@
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fs-extra": "^11.3.0",
-    "fs": "^0.0.1-security",
     "multer": "^2.0.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "openai": "^5.3.0",
+    "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
-    "prism-media": "^1.3.5",
     "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
     "youtubei.js": "^14.0.0",
     "yt-search": "^2.13.1",
-    "ytdl-core": "^4.11.5",
-    "ws": "^8.16.0"
-  },
-  "optionalDependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "canvas": "^2.11.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "opusscript": "^0.0.8",
-    "sodium": "^3.0.2"
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
