--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -5,6 +5,7 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  VITE_API_URL = "https://agentbee.up.railway.app"
 
 # SPA redirects - alle Routen zu index.html für React Router
 [[redirects]]
