--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "openai": "^5.6.0",
     "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
+    "sharp": "^0.34.2",
     "spotify-web-api-node": "^5.0.2",
     "util": "^0.12.5",
     "youtubei.js": "^14.0.0",
