Fix: Musik Panel Channel-Konfiguration + Settings Reload API - Behebt Discord Panel Posting Problem

--- a/music-settings.json
+++ b/music-settings.json
@@ -18,7 +18,7 @@
   },
   "interactivePanel": {
     "enabled": true,
-    "channelId": "",
+    "channelId": "1204008652334604370",
     "messageId": "",
     "autoUpdate": true,
     "embedColor": "#FF6B6B"
