--- a/server-stats-settings.json
+++ b/server-stats-settings.json
@@ -4,19 +4,19 @@
   "channels": {
     "memberCount": {
       "enabled": true,
-      "channelId": "1386764425322696864",
+      "channelId": "1386767330817605652",
       "name": "👥 Mitglieder: {count}",
       "position": 0
     },
     "onlineCount": {
       "enabled": true,
-      "channelId": "1386764430804783146",
+      "channelId": "1386767336790425794",
       "name": "🟢 Online: {count}",
       "position": 1
     },
     "boostCount": {
       "enabled": true,
-      "channelId": "1386764437020741662",
+      "channelId": "1386767342708592690",
       "name": "🚀 Boosts: {count}",
       "position": 2
     },
@@ -52,12 +52,12 @@
     },
     "valorantSeason": {
       "enabled": true,
-      "channelId": "1386764443131580526",
+      "channelId": "",
       "name": "🎮 Valorant Season Start: {countdown}",
       "position": 8
     }
   },
-  "categoryId": "1386764423875661854",
+  "categoryId": "1386767328821121166",
   "categoryName": "📊 Server Statistiken",
   "permissions": {
     "viewChannel": true,
