Update: Bot-Vorstellungs-System aktualisiert - Features & Version korrigiert

--- a/bot-introduction-settings.json
+++ b/bot-introduction-settings.json
@@ -26,7 +26,7 @@
     "color": "0x00FF7F",
     "thumbnail": "bot",
     "customThumbnail": "",
-    "footer": "Entwickelt mit ❤️ • Version 1.2.0 • {timestamp}",
+    "footer": "Entwickelt mit ❤️ • {version} • {timestamp}",
     "author": {
       "enabled": true,
       "name": "{botName} - Dein Discord Assistent",
@@ -34,18 +34,38 @@
     },
     "fields": [
       {
-        "name": "🎯 Meine Hauptfunktionen",
-        "value": "• **Moderation** - Auto-Filter, Warns & Mutes\n• **XP-System** - Level-Belohnungen & Leaderboards\n• **Musik-Bot** - YouTube, Spotify, Radio & Playlists\n• **Valorant** - Rang-Tracking & Match-History\n• **Giveaways** - Faire Verlosungen mit Anti-Cheat\n• **Twitch-Alerts** - Live-Stream Benachrichtigungen",
+        "name": "🎯 Moderation & Verwaltung",
+        "value": "• **Moderation** - Auto-Filter, Warns & Mutes mit Supabase\n• **Ticket-System** - Support-Channels mit V2-Integration\n• **Welcome-System** - Personalisierte Begrüßungen\n• **Verifizierung** - Captcha & Game-Authentifizierung\n• **Spam-Schutz** - Intelligente Raid-Erkennung",
         "inline": false
       },
       {
-        "name": "⚡ Weitere Features",
-        "value": "• **Welcome-System** - Personalisierte Begrüßungen\n• **Ticket-System** - Support-Channels\n• **Verifizierung** - Captcha & Game-Check\n• **AI-Integration** - Smart-Responses",
+        "name": "📈 Community Features",
+        "value": "• **XP-System** - Level-Belohnungen & Leaderboards (Supabase-persistent)\n• **Giveaways** - Faire Verlosungen mit Anti-Cheat\n• **Server-Stats** - Live-Channels & Analytics\n• **Rules-System** - Automatische Regel-Posts",
         "inline": true
       },
       {
-        "name": "📊 Statistiken",
-        "value": "• **Server-Stats** - Live-Channels\n• **Analytics** - Detaillierte Logs\n• **Voice-Tracking** - Activity-Monitoring",
+        "name": "🎮 Gaming Integration",
+        "value": "• **Valorant** - Rang-Tracking & Match-History mit Cards\n• **Twitch-Alerts** - Live-Stream Benachrichtigungen mit AI\n• **Game-Roles** - Automatische Rollen-Zuweisung",
+        "inline": true
+      },
+      {
+        "name": "🎵 Musik & Entertainment",
+        "value": "• **Simple Music Panel** - Benutzerfreundliche Musik-Steuerung\n• **YouTube Radio** - Streaming-Integration\n• **Song-Requests** - Community-Playlists\n• **Voice-XP** - Belohnungen für Voice-Aktivität",
+        "inline": false
+      },
+      {
+        "name": "🤖 AI & Technologie",
+        "value": "• **OpenAI Integration** - Smart-Responses & Personalisierung\n• **Supabase Backend** - Moderne Datenbank-Persistierung\n• **Web-Dashboard** - Vollständige Bot-Konfiguration\n• **API-Management** - Zentrale Schlüssel-Verwaltung",
+        "inline": false
+      },
+      {
+        "name": "⚡ Schnellstart",
+        "value": "Nutze `/help` um alle Befehle zu sehen oder besuche das **Web-Dashboard** für erweiterte Konfiguration!",
+        "inline": true
+      },
+      {
+        "name": "🔧 Dashboard",
+        "value": "Komplette Bot-Verwaltung über das moderne React-Dashboard mit Echtzeit-Updates!",
         "inline": true
       }
     ]
