Debug: XP-System Reset - Erweiterte Logs und Debug-API hinzugefügt

--- a/bot-introduction-settings.json
+++ b/bot-introduction-settings.json
@@ -16,7 +16,7 @@
     "stell dich vor"
   ],
   "cooldown": {
-    "enabled": false,
+    "enabled": true,
     "duration": 3600000,
     "perChannel": true
   },
