--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,6 @@
 # Node.js
 node_modules/
+dashboard/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -47,14 +48,11 @@ coverage/
 # Build outputs
 dist/
 build/
+dashboard/dist/
 
 # Temporary files
 tmp/
 temp/
-
-# Documentation
-*.md
-docs/
 
 # Test files
 test/
@@ -70,10 +68,66 @@ docker-compose*
 # Railway files
 railway.json
 
-# Dashboard source (not needed for backend)
+# LARGE FILES EXCLUSIONS (causing Railway timeout)
+# Music files - not needed in production
+music/
+*.mp3
+*.wav
+*.flac
+*.m4a
+
+# Test images and generated files
+test-*.png
+test-*.jpg
+test-*.gif
+test-*.svg
+
+# Backup files
+*backup*
+*-backup*
+*_backup*
+*-old*
+*_old*
+index_backup.js
+index-backup.js
+index-old.js
+music-api-old.js
+api-server-backup.js
+*-settings-backup-*.json
+
+# Large text files
+original-music.txt
+
+# Migration files (not needed at runtime)
+*.sql
+*migration*
+
+# Settings backups
+settings-backup/
+
+# Development scripts
+scripts/
+
+# Large JSON data files (use database instead)
+giveaway-data.json
+valorant-stats.json
+xp-data.json
+invite-tracking.json
+introduction-xp-tracking.json
+verified-users.json
+muted-users.json
+reset-history.json
+twitch-streamers.json
+twitch-live-data.json
+valorant-players.json
+
+# CI/CD files
+.github/
+vercel.json
+nixpacks.toml
+
+# Dashboard development files (but keep essentials)
 dashboard/src/
 dashboard/node_modules/
-dashboard/dist/
-
-# Keep only built dashboard files for serving static assets
-!dashboard/public/ 
+dashboard/temp_progress.txt
+dashboard/VERIFICATION_SETUP.md 
