Dashboard: Railway-Integration konfiguriert - VITE-Config nutzt Environment Variable für Railway URL

--- a/dashboard/env.example
+++ b/dashboard/env.example
@@ -4,7 +4,11 @@ VITE_DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET_HERE
 VITE_DISCORD_REDIRECT_URI=http://localhost:5173/verify
 
 # API Configuration  
-VITE_API_BASE_URL=http://localhost:3000/api
+# Localhost Entwicklung
+VITE_API_BASE_URL=http://localhost:3001
+
+# Railway Produktion (ersetze mit deiner Railway URL)
+# VITE_API_BASE_URL=https://deine-app-name.railway.app
 
 # Bot Configuration
 VITE_BOT_TOKEN=YOUR_DISCORD_BOT_TOKEN_HERE
