Netlify Railway Integration FIX - API Redirects + Environment Variables
 NETLIFY.TOML FIXES:
- API redirects MÜSSEN VOR SPA redirects stehen!
- /api/* -> https://agentbee.up.railway.app/api/*
- VITE_API_BASE_URL in build environment gesetzt

 API CLIENT FIXES:
- VITE_API_BASE_URL statt VITE_API_URL
- Global fetch override für /api/* calls
- Valorant.tsx nutzt jetzt api.updateValorantSettings()

 DASHBOARD CONFIGURATION:
- .env mit VITE_API_BASE_URL=https://agentbee.up.railway.app
- Automatic Railway routing in Production

READY FOR NETLIFY DEPLOYMENT!

--- a/dashboard/netlify.toml
+++ b/dashboard/netlify.toml
@@ -5,19 +5,20 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  VITE_API_BASE_URL = "https://agentbee.up.railway.app"
+
+# API redirects MÜSSEN VOR SPA redirects stehen!
+[[redirects]]
+  from = "/api/*"
+  to = "https://agentbee.up.railway.app/api/:splat"
+  status = 200
+  force = true
 
 # SPA redirects - alle Routen zu index.html für React Router
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# API redirects (falls benötigt)
-[[redirects]]
-  from = "/api/*"
-  to = "https://agentbee.up.railway.app/api/:splat"
-  status = 200
-  force = true
 
 # Security headers
 [[headers]]
