Last Change Berechnung Fix - Debug-Logging + Sichere Fallback-Behandlung
PROBLEM:
 'Letzte Änderung: 0 RR' - lastChange wurde nicht korrekt berechnet
 playerData.current.last_change war undefined/null
 Keine erkennbare Information bei 0-Werten

FIX:
 Debug-Logging für last_change Werte hinzugefügt
 Sichere Fallback-Behandlung: null/undefined  0
 Erweiterte Template-Variable: lastChangeStatus
 Bessere UX: '0 RR - Keine Änderung seit letztem Match'

TECHNICAL CHANGES:
- lastChangeValue = safe fallback calculation
- lastChangeStatus = explanatory text for 0 values
- Debug logs: lastChangeRaw, lastChangeType, currentRR

ANZEIGE JETZT:
- +15 RR (bei Gewinn)
- -18 RR (bei Verlust)
- 0 RR - Keine Änderung seit letztem Match (bei 0)

--- a/valorant-settings.json
+++ b/valorant-settings.json
@@ -39,8 +39,8 @@
       },
       "lastChange": {
         "enabled": true,
-        "name": "📊 Letzte Änderung",
-        "value": "{lastChangePrefix}{lastChange} RR",
+        "name": "📊 Letzte Änderung", 
+        "value": "{lastChangePrefix}{lastChange} RR{lastChangeStatus}",
         "inline": true
       },
       "leaderboard": {
