Dynamisches Agent-Icon - Zeigt am meisten gespielten Agent statt statischem Fade
FEATURE:
 Discord Embed Thumbnail zeigt jetzt am häufigsten gespielten Agent
 Ersetzt statisches Fade-Icon durch dynamisches Agent-Icon
 Fallback auf Fade wenn kein Agent ermittelt werden kann

IMPLEMENTATION:
 Agent-Analyse vor Embed-Erstellung verschoben
 mostPlayedAgent Logik aus Match-Daten extrahiert
 getAgentUUID() für Agent-Icon URL verwendet
 Agent-Statistiken als neues Embed-Feld hinzugefügt

NEUE FEATURES:
 Agent-Statistiken Feld: Zeigt Lieblings-Agent + Match-Count
 Template-Variablen: {favoriteAgent}, {agentIconUrl}
 Fallback-Behandlung: Spezielle Nachricht wenn kein Agent

BEISPIEL:
- Früher: Immer Fade-Icon
- Jetzt: Jett-Icon (15 Matches)  oder Reyna-Icon (12 Matches)

DEBUG:
 Console-Log: 'Lieblings-Agent gefunden: Jett (15 Matches)'
 Fallback-Warning bei Agent UUID Fehlern

PERSONALISIERTES VALORANT EXPERIENCE!

--- a/valorant-settings.json
+++ b/valorant-settings.json
@@ -82,7 +82,7 @@
       "agentStats": {
         "enabled": true,
         "name": "🎭 Agent-Statistiken",
-        "value": "**Lieblings-Agent:** Wird geladen...\n**Agent Win-Rate:** N/A\n**Agent K/D:** N/A",
+        "value": "**Lieblings-Agent:** {favoriteAgent}\n**Basierend auf:** {totalMatches} Matches\n**Thumbnail:** Dynamisch",
         "inline": true
       },
       "performance": {
