Railway Deployment Trigger - Command API verfügbar
- Package.json Update auf v2.1.0 für Railway Neustart
- Command API Endpoints sind korrekt registriert in index.js
- Force Railway Re-Deployment für neue API-Routes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "discord-bot",
-  "version": "1.0.32",
-  "description": "Ein Discord-Bot mit Web-Dashboard",
+  "name": "agentbee-bot",
+  "version": "2.1.0",
+  "description": "AgentBee Discord Bot with XP, Giveaway, Ticket, Music, Twitch, Valorant systems",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
